--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -559,6 +559,23 @@
                                         <div class="file_box">
                                             <input type="file" id="file_inp" class="file_inp">
                                             <label for="file_inp">파일첨부</label>
+                                            <span class="file_value"></span>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row"><label for="file_inp">공지글<span class="req">*</span></label></th>
+                                <td colspan="3">
+                                    <div class="inp_group chk">
+                                        <div class="chk_box">
+                                            <span>
+                                                <input type="checkbox" id="chk_0221">
+                                                <label for="chk_0221">공지글</label>
+                                            </span>
+                                        </div>
+                                        <div class="inp_box datepicker_box">
+                                            <input type="text" id="input_0224" class="datepicker_day">
                                         </div>
                                     </div>
                                 </td>
