인풋박스 파일첨부 수정

--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -561,6 +561,9 @@
                                             <label for="file_inp">파일첨부</label>
                                             <span class="file_value"></span>
                                         </div>
+                                        <div class="inp_box">
+                                            <input type="text" id="input_0226">
+                                        </div>
                                     </div>
                                 </td>
                             </tr>
