--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -574,6 +574,7 @@
                                         <div class="chk_box">
                                             <span>
                                                 <input type="checkbox" id="chk_0221">
+                                                <input type="hidden" id="">
                                                 <label for="chk_0221">공지글</label>
                                             </span>
                                         </div>
