--- a/pub_list.html
+++ b/pub_list.html
@@ -144,9 +144,9 @@
                     division: '메인',
                     depth1:'메인',
                     path:'./portal/html/main.html',
-                    date:'',
+                    date:'2022-09-02',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
 
@@ -353,12 +353,12 @@
                 },
                 {
                     division: '',
-                    depth1:'맞춤투자가이드',
+                    depth1:'맞춤투자 가이드',
                     path:'./portal/html/USR-02-02-F-LIST.html',
                     date:'',
                     mdate:'2022-09-05',
                     con:'작업중',
-                    etc:''
+                    etc:'서치박스 셀렉트 추가'
                 },
                 {
                     division: '',
