--- a/portal/html/USR-1010-F-FORM.html
+++ b/portal/html/USR-1010-F-FORM.html
@@ -431,11 +431,16 @@
                                 <td colspan="3">
                                     <div class="inp_group address">
                                         <span>
-                                            <div class="inp_box min">
-                                                <input type="text" id="input_06">
+                                            <div class="inp_box add_num">
+                                                <input type="text" id="input_06" disabled>
                                             </div>
                                             <div class="box_btn">
                                                 <button class="search">주소검색</button>
+                                            </div>
+                                        </span>
+                                        <span>
+                                            <div class="inp_box">
+                                                <input type="text" id="input_06" disabled>
                                             </div>
                                         </span>
                                         <span>
