--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -399,7 +399,7 @@
                                 <th scope="row"><label for="input_01">사업자 등록번호<span class="req">*</span></label></th>
                                 <td colspan="3">
                                     <div class="inp_group search">
-                                        <div class="inp_box">
+                                        <div class="inp_box min">
                                             <input type="text" id="input_01" value="174-05-01552">
                                         </div>
                                         <div class="box_btn">
