--- a/pub_list.html
+++ b/pub_list.html
@@ -647,9 +647,9 @@
                     division: '',
                     depth1:'커뮤니티 - 목록',
                     path:'./portal/html/USR-1330-F-LIST.html',
-                    date:'',
+                    date:'2022-09-05',
                     mdate:'2022-09-07',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
@@ -791,38 +791,65 @@
                 // 회원
                 {
                     division: '회원',
+                    depth1:'회원가입 - 회원유형 선택',
+                    path:'./portal/html/USR-2009-F-FORM.html',
+                    date:'2022-09-05',
+                    mdate:'2022-11-10',
+                    con:'완료',
+                    etc:'[1차디자인]'
+                },
+                {
+                    division: '',
                     depth1:'회원가입 - STEP01 약관동의',
                     path:'./portal/html/USR-2010-F-FORM.html',
-                    date:'',
+                    date:'2022-09-05',
                     mdate:'2022-11-10',
-                    con:'작업중',
-                    etc:'[1차디자인]'
+                    con:'완료',
+                    etc:'[1차디자인] 0905디자인없음'
                 },
                 {
                     division: '',
                     depth1:'회원가입 - STEP02 본인인증',
                     path:'./portal/html/USR-2011-F-FORM.html',
-                    date:'',
+                    date:'2022-09-05',
                     mdate:'2022-11-10',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
                     division: '',
-                    depth1:'회원가입 - STEP03 회원정보입력',
+                    depth1:'회원가입 - STEP03 회원정보입력-개인',
                     path:'./portal/html/USR-2012-F-FORM.html',
+                    date:'2022-09-05',
+                    mdate:'2022-11-10',
+                    con:'완료',
+                    etc:'[1차디자인]'
+                },
+                {
+                    division: '',
+                    depth1:'회원가입 - STEP03 회원정보입력-기업',
+                    path:'./portal/html/USR-20121-F-FORM.html',
+                    date:'2022-09-05',
+                    mdate:'2022-11-10',
+                    con:'완료',
+                    etc:'[1차디자인]'
+                },
+                {
+                    division: '',
+                    depth1:'회원가입 - STEP03 회원정보입력-기업 추가정보',
+                    path:'./portal/html/USR-20121-F-FORM.html',
                     date:'',
                     mdate:'2022-11-10',
-                    con:'작업중',
+                    con:'수정중',
                     etc:'[1차디자인]'
                 },
                 {
                     division: '',
                     depth1:'회원가입 - STEP04 가입완료',
                     path:'./portal/html/USR-2013-F-FORM.html',
-                    date:'',
+                    date:'2022-09-05',
                     mdate:'2022-11-10',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
