회원가입 완료

--- a/portal/html/USR-20121-F-FORM.html
+++ b/portal/html/USR-20121-F-FORM.html
@@ -734,7 +734,7 @@
 
                 </div>
 
-                <div class="btn_box_group">
+                <div class="btn_box_group type_01">
                     <div class="btn_box">
                         <a href="./USR-20122-F-FORM.html" class="btn_navy">기업정보 추가등록</a>
                     </div>
