--- a/pub_list.html
+++ b/pub_list.html
@@ -837,10 +837,10 @@
                 {
                     division: '',
                     depth1:'회원가입 - STEP03 회원정보입력-기업 추가정보',
-                    path:'./portal/html/USR-20121-F-FORM.html',
-                    date:'',
+                    path:'./portal/html/USR-20122-F-FORM.html',
+                    date:'2022-09-06',
                     mdate:'2022-11-10',
-                    con:'수정중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
