--- a/portal/html/USR-1010-F-FORM.html
+++ b/portal/html/USR-1010-F-FORM.html
@@ -684,15 +684,17 @@
                                         <tr>
                                             <th scope="row"><label for="radio_3">공개여부<span class="req">*</span></label></th>
                                             <td colspan="3">
-                                                <div class="rdo_box">
-                                                    <span>
-                                                        <input type="radio" id="radio_3" name="rdo_group_2" checked>
-                                                        <label for="radio_3">공개</label>
-                                                    </span>
-                                                    <span>
-                                                        <input type="radio" id="radio_4" name="rdo_group_2">
-                                                        <label for="radio_4">비공개</label>
-                                                    </span>
+                                                <div class="inp_group">
+                                                    <div class="rdo_box">
+                                                        <span>
+                                                            <input type="radio" id="radio_3" name="rdo_group_2" checked>
+                                                            <label for="radio_3">공개</label>
+                                                        </span>
+                                                        <span>
+                                                            <input type="radio" id="radio_4" name="rdo_group_2">
+                                                            <label for="radio_4">비공개</label>
+                                                        </span>
+                                                    </div>
                                                 </div>
                                             </td>
                                         </tr>
@@ -850,15 +852,17 @@
                                         <tr>
                                             <th scope="row"><label for="radio_5">공개여부<span class="req">*</span></label></th>
                                             <td colspan="3">
-                                                <div class="rdo_box">
-                                                    <span>
-                                                        <input type="radio" id="radio_5" name="rdo_group_3" checked>
-                                                        <label for="radio_5">공개</label>
-                                                    </span>
-                                                    <span>
-                                                        <input type="radio" id="radio_6" name="rdo_group_3">
-                                                        <label for="radio_6">비공개</label>
-                                                    </span>
+                                                <div class="inp_group">
+                                                    <div class="rdo_box">
+                                                        <span>
+                                                            <input type="radio" id="radio_5" name="rdo_group_3" checked>
+                                                            <label for="radio_5">공개</label>
+                                                        </span>
+                                                        <span>
+                                                            <input type="radio" id="radio_6" name="rdo_group_3">
+                                                            <label for="radio_6">비공개</label>
+                                                        </span>
+                                                    </div>
                                                 </div>
                                             </td>
                                         </tr>
