--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -378,8 +378,8 @@
                                 <dl>
                                     <dt>
                                         <strong>공지사항<span>총 100건</span></strong>
-                                        <div class="more">
-                                            <a href="">더보기</a>
+                                        <div class="btn_box">
+                                            <a href="" class="more">더보기</a>
                                         </div>
                                     </dt>
                                     <dd>
@@ -412,8 +412,8 @@
                                 <dl>
                                     <dt>
                                         <strong>자유게시판<span>총 20건</span></strong>
-                                        <div class="more">
-                                            <a href="">더보기</a>
+                                        <div class="btn_box">
+                                            <a href="" class="more">더보기</a>
                                         </div>
                                     </dt>
                                     <dd>
@@ -446,8 +446,8 @@
                                 <dl>
                                     <dt>
                                         <strong>회원목록<span>총 20명</span></strong>
-                                        <div class="more">
-                                            <a href="">더보기</a>
+                                        <div class="btn_box">
+                                            <a href="" class="more">더보기</a>
                                         </div>
                                     </dt>
                                     <dd>
@@ -480,8 +480,8 @@
                                 <dl>
                                     <dt>
                                         <strong>회원목록<span>총 1200건</span></strong>
-                                        <div class="more">
-                                            <a href="">더보기</a>
+                                        <div class="btn_box">
+                                            <a href="" class="more">더보기</a>
                                         </div>
                                     </dt>
                                     <dd>
