--- a/pub_list.html
+++ b/pub_list.html
@@ -856,15 +856,24 @@
                     division: '',
                     depth1:'로그인/아웃',
                     path:'./portal/html/USR-2020-F-FORM.html',
-                    date:'',
+                    date:'2022-09-06',
                     mdate:'2022-11-18',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[스타일가이드] '
                 },
                 {
                     division: '',
-                    depth1:'아이디/비밀번호 찾기',
+                    depth1:'아이디 찾기',
                     path:'./portal/html/USR-2030-F-FORM.html',
+                    date:'2022-09-06',
+                    mdate:'2022-11-01',
+                    con:'완료',
+                    etc:'[1차디자인]'
+                },
+                {
+                    division: '',
+                    depth1:'비밀번호 찾기',
+                    path:'./portal/html/USR-2031-F-FORM.html',
                     date:'',
                     mdate:'2022-11-01',
                     con:'작업중',
@@ -874,9 +883,9 @@
                     division: '',
                     depth1:'마이페이지 - 대시보드',
                     path:'./portal/html/USR-2040-F-DASH.html',
-                    date:'',
+                    date:'2022-09-07',
                     mdate:'2022-11-07',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[스타일가이드] '
                 },
                 {
