--- a/pub_list.html
+++ b/pub_list.html
@@ -127,6 +127,15 @@
                     con:'작업중',
                     etc:''
                 },
+                {
+                    division: '메뉴 gnb + 팝업',
+                    depth1:'',
+                    path:'./portal/html/layout.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:''
+                },
 
                 // 요청
                 {
@@ -890,11 +899,20 @@
                 },
                 {
                     division: '',
-                    depth1:'마이페이지 - 사용자정보 관리',
+                    depth1:'마이페이지 - 사용자정보 관리(개인)',
                     path:'./portal/html/USR-2041-F-FORM.html',
-                    date:'',
+                    date:'2022-09-07',
                     mdate:'2022-11-16',
-                    con:'작업중',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'마이페이지 - 사용자정보 관리(기업)',
+                    path:'./portal/html/USR-20411-F-FORM.html',
+                    date:'2022-09-07',
+                    mdate:'2022-11-16',
+                    con:'완료',
                     etc:''
                 },
                 {
