--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -246,6 +246,48 @@
                                 <a href="" class="btn_blue shadow">수정</a>
                             </div>
                         </div>
+                        <br/>
+                        <div class="btn_box_group type_01">
+                            <div class="btn_box">
+                                <a href="" class="btn_blue">회원유형 변경신청</a>
+                            </div>
+                            <div class="btn_box">
+                                <a href="" class="btn_white">비밀번호 변경</a>
+                            </div>
+                        </div>
+                        <div class="btn_box_group type_01 left">
+                            <div class="btn_box">
+                                <a href="" class="btn_blue">회원유형 변경신청</a>
+                            </div>
+                            <div class="btn_box">
+                                <a href="" class="btn_white">비밀번호 변경</a>
+                            </div>
+                            <div class="btn_box">
+                                <a href="" class="btn_gray">비밀번호 변경</a>
+                            </div>
+                        </div>
+                        <div class="btn_box_group type_01">
+                            <div class="btn_box">
+                                <a href="" class="btn_blue">회원유형 변경신청</a>
+                            </div>
+                            <div class="btn_box">
+                                <a href="" class="btn_white">비밀번호 변경</a>
+                            </div>
+                            <div class="btn_box">
+                                <a href="" class="btn_gray">비밀번호 변경</a>
+                            </div>
+                        </div>
+                        <div class="btn_box_group type_01 right">
+                            <div class="btn_box">
+                                <a href="" class="btn_blue">회원유형 변경신청</a>
+                            </div>
+                            <div class="btn_box">
+                                <a href="" class="btn_white">비밀번호 변경</a>
+                            </div>
+                            <div class="btn_box">
+                                <a href="" class="btn_gray">비밀번호 변경</a>
+                            </div>
+                        </div>
                     </dd>
                 </dl>
                 <br/>
