--- a/pub_list.html
+++ b/pub_list.html
@@ -227,9 +227,9 @@
                     division: '',
                     depth1:'기업 홍보 - 등록/수정',
                     path:'./portal/html/USR-1030-B-FORM.html',
-                    date:'2022-08-26',
+                    date:'2022-09-07',
                     mdate:'2022-09-19',
-                    con:'보류',
+                    con:'완료',
                     etc:'[게시판 타입1 - 등록수정]'
                 },
                 {
@@ -409,27 +409,27 @@
                     division: '',
                     depth1:'벤처투자상담',
                     path:'./portal/html/USR-1162-B-LIST.html',
-                    date:'',
+                    date:'2022-09-07',
                     mdate:'2022-10-11',
-                    con:'작업중',
-                    etc:'0829아직디자인안옴'
+                    con:'완료',
+                    etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자상담 상세',
                     path:'./portal/html/USR-1162-B-DTL.html',
-                    date:'',
+                    date:'2022-09-07',
                     mdate:'2022-10-11',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자상담 등록/수정',
                     path:'./portal/html/USR-1162-B-FORM.html',
-                    date:'',
+                    date:'2022-09-07',
                     mdate:'2022-10-11',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
 
@@ -919,9 +919,9 @@
                     division: '',
                     depth1:'마이페이지 - 즐겨찾기 관리(TAB-2)',
                     path:'./portal/html/USR-2042-F-LIST.html',
-                    date:'',
+                    date:'2022-09-07',
                     mdate:'2022-11-22',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
@@ -931,7 +931,7 @@
                     date:'',
                     mdate:'2022-11-17',
                     con:'작업중',
-                    etc:'-> 바로가기 USR-1332-F-DASH'
+                    etc:'-> 바로가기 USR-1332-B-LIST.html'
                 },
                 {
                     division: '',
