--- a/portal/html/USR-1162-B-DTL.html
+++ b/portal/html/USR-1162-B-DTL.html
@@ -367,8 +367,12 @@
                                 <td>
                                     <div class="answer_box">
                                         <span class="ico_answer"></span>
-                                        <div class="textarea_box">
-                                            <textarea>답변내용</textarea>
+                                        <div class="cont">
+                                            상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용상담내용<br/>
+                                            상담내용<br/>
+                                            상담내용<br/>
+                                            상담내용<br/>
+                                            상담내용<br/>
                                         </div>
                                     </div>
                                 </td>
