--- a/pub_list.html
+++ b/pub_list.html
@@ -212,7 +212,7 @@
                     date:'2022-08-26',
                     mdate:'2022-09-19',
                     con:'완료',
-                    etc:'[게시판 타입1 - 목록]'
+                    etc:'[게시판 타입1 - 목록] 0908 공지고정 수정'
                 },
                 {
                     division: '',
@@ -937,10 +937,10 @@
                     division: '',
                     depth1:'마이페이지 - 온라인 파일 관리',
                     path:'./portal/html/USR-2043-F-LIST.html',
-                    date:'',
+                    date:'2022-09-08',
                     mdate:'',
                     con:'작업중',
-                    etc:''
+                    etc:'완료'
                 },
                 {
                     division: '',
