--- a/pub_list.html
+++ b/pub_list.html
@@ -939,44 +939,35 @@
                     path:'./portal/html/USR-2043-F-LIST.html',
                     date:'2022-09-08',
                     mdate:'',
-                    con:'작업중',
-                    etc:'완료'
+                    con:'완료',
+                    etc:''
                 },
                 {
                     division: '',
                     depth1:'마이페이지 - 알림 서비스(TAB-2)',
                     path:'./portal/html/USR-2044-F-LIST.html',
-                    date:'',
+                    date:'2022-09-13',
                     mdate:'2022-11-17',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
                     division: '',
                     depth1:'마이페이지 - 알림 서비스 상세',
                     path:'./portal/html/USR-2044-F-DTL.html',
-                    date:'',
+                    date:'2022-09-13',
                     mdate:'2022-11-17',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'마이페이지 - 알림 서비스 등록',
                     path:'./portal/html/USR-2044-F-FORM.html',
-                    date:'',
+                    date:'2022-09-13',
                     mdate:'2022-11-17',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
-                },
-                {
-                    division: '',
-                    depth1:'마이페이지 - 알림 서비스 쪽지 레이어팝업',
-                    path:'./portal/html/.html',
-                    date:'',
-                    mdate:'2022-11-17',
-                    con:'작업중',
-                    etc:'[1차디자인]'
                 },
                 {
                     division: '',
@@ -1027,9 +1018,9 @@
                     division: '',
                     depth1:'마이페이지 - IR 자료 요청 관리(TAB-2)',
                     path:'./portal/html/USR-2045-F-LIST.html',
-                    date:'',
+                    date:'2022-09-13',
                     mdate:'2022-11-07',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
